fix z-index

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,7 +7,6 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-    z-index: -1;
 }
 .description{
     width: 80%;
